--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main>
+    <main role="main">
+      <div class="info-card text-2">
+        Challenge by
+        <a href="https://www.frontendmentor.io/profile/H3NRY-JR" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://github.com/H3NRY-JR" target="_blank">H3NRY-JR</a>.
+      </div>
       <div class="blog-card">
         <img
           src="assets/images/illustration-article.svg"
