Adding page title and img alts

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="blog-card">
         <img
           src="assets/images/illustration-article.svg"
-          alt=""
+          alt="html and css foundations"
           class="blog-img"
         />
         <div class="blog-content">
@@ -35,7 +35,7 @@
           </p>
         </div>
         <div class="author-container">
-          <img src="assets/images/image-avatar.webp" alt="" class="avatar-img">
+          <img src="assets/images/image-avatar.webp" alt="Greg Hooper" class="avatar-img">
           <p class="author-name text-3">Greg Hooper</p>
         </div>
       </div>
